--- a/casamento/static/css/local.css
+++ b/casamento/static/css/local.css
@@ -61,51 +61,67 @@ ul{
     background: #FFC0CB;
     color: #FFFFFF;
 }
-.coracao{
-    text-align: center;
-}
-.colunat{
-    padding: 0px 10px;
-    margin: 25px 0px;
-}
+
 .caixa{
     background: #FFFFFF;
     box-shadow: 2px 2px 2px #888888;
-    align-text: center;
+    text-align: center;
     min-height: 550px;
     padding: 5px 15px;
     border: 0px solid;
     border-radius: 5px;
+    overflow: auto;
 }
-h2{
+
+.mapa{
     margin: 10px 0px;
-    color: #FFC0CB;
-    font-family: 'Lobster';
-    font-size: 45px;
-    font-weight: normal;
+    width: 100%;
+    height: 500px;
+    box-shadow: 1px 1px 1px #888888;
+    display: inline-block;
 }
 
-.datacasa{
-    padding: 50px 0px 0px 0px;
-    text-align: center;
-    color: #FFC0CB;
-    font-size: 80px;
-    font-family: 'Lobster';
+.esp{
+    margin: 20px 0px 0px 0px;
+    padding: 0px;
+}
+.imgtxt{
+    width: 90%;
+    box-shadow: 2px 2px 2px #888888;
+    border: 0px solid;
+    border-radius: 25px;
+    margin: 30px 0px 0px 0px;
 }
 
-.caidata{
-     padding: 50px 0px 0px 0px;
+.caixadescricao{
+    float: left;
+    padding: 10px;
+    width: 50%;
+    overflow: auto;
+    text-align: center
+}
+
+.caixamapa{
+
+    float: right;
+    padding: 10px;
+    height: 400px;
+    width: 50%;
+    overflow: auto;
+    text-align: center;
+
+}
+
+h2{
     text-align: center;
     color: #FFC0CB;
+    font-family: 'Lobster';
     font-size: 50px;
-    font-family: 'Lobster';
+    text-shadow: 1px 1px 1px #888888;
 }
 
-.dias{
-    font-size:80px;
+p{
+    text-indent: 50px;
+    text-align: justify;
+    padding: 0px 50px;
 }
-
-
-
-
-
