--- a/casamento/templates/casamento/presenca.html
+++ b/casamento/templates/casamento/presenca.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/presenca.css' %}"/>
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link rel="icon" href="{% static 'imagem/aliancaico.png' %}">
+    <script type="text/javascript" src="{% static 'scripts/validacao.js' %}"></script>
     <title>Confirmação Convidado</title>
 </head>
 <body>
 
 <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 titulo">
+    <div class="col-md-12 titulo">
         <h1>Confirmação de Convidado</h1>
     </div>
-    <div class="col-md-2"></div>
 </div>
 <div class="row linhah1">
     <div class="col-md-12"></div>
@@ -31,16 +31,16 @@
             <a href="{% url 'casamento.views.local_casamento'%}">
                 <li>Local</li>
             </a>
-            <a href="{% url 'casamento.views.listapresentes'%}">
+            <a href="{% url 'casamento.views.linkpresente'%}">                                                                          
                 <li>Lista Presentes</li>
             </a>
             <a href="{% url 'casamento.views.presenca'%}">
                 <li>Cofirmação de Presença</li>
             </a>
-            <a href="">
+            <!--<a href="">
                 <li>Blog</li>
-            </a>
-            <a href="">
+            </a>-->
+            <a href="{% url 'casamento.views.contato'%}">
                 <li>Contato</li>
             </a>
         </ul>
@@ -51,22 +51,38 @@
 <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-10 caixa">
-        <form method="post">
+
+        {% block content %}
+        <form action="confirma/" name="form1" method="post">{% csrf_token %}
             <div class="caixaForm">
 
                 <div class="inputcaixa">
                     <label for="nome">Nome:</label>
-                    <input id="nome" type="text">
+                    <input id="nome" name="nome" type="text">
                 </div>
 
                 <div class="checkcaixa">
-                    <input id="presenca" type="checkbox"><span>Vai estar presente</span><br>
+                    <span>Vai estar presente?</span>
+                    <div class="caixaradio">
+                        <div class="textoradio">
+                            <input type="radio" name="presenca" value="sim" checked="checked">Sim
+                        </div>
+                        <div class="textoradio">
+                            <input type="radio" name="presenca" value="nao">Não
+                        </div>
+                    </div>
                 </div>
-                <button type="submit">Enviar</button>
+
+                <div>
+                    <div class="lbconvidados">Quantos pessoas vão com você?</div>
+                    <input id="numero" name="pessoas" type="number">
+                </div>
+
+                <button type="submit" onclick="return validar()">Enviar</button>
 
             </div>
-
         </form>
+        {% endblock %}
     </div>
     <div class="col-md-1"></div>
 </div>
