--- a/casamento/templates/casamento/presenca.html
+++ b/casamento/templates/casamento/presenca.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div>
-                    <div class="lbconvidados">Quantos pessoas vão com você?</div>
+                    <div class="lbconvidados">Quantas pessoas vão com você?</div>
                     <input id="numero" name="pessoas" type="number">
                 </div>
 
