--- a/casamento/templates/casamento/tela_inicial.html
+++ b/casamento/templates/casamento/tela_inicial.html
@@ -24,11 +24,9 @@
     </head>
     <body onload="calcularQtdHora()">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8 titulo">
+            <div class="col-md-12 titulo">
                 <h1>Filipe e Mayara</h1>
             </div>
-            <div class="col-md-2"></div>
         </div>
 
         <div class="row linhah1">
@@ -51,23 +49,28 @@
         </div>
 
         <div class="row">
-             <div class="col-md-2"></div>
-            <div class="col-md-8 coracao">
+             <div class="col-md-1"></div>
+            <div class="col-md-10 coracao caixaimg">
                 <img class="imgprincipal" src="{% static 'imagem/osdois.png' %}">
             </div>
-            <div class="col-md-2"></div>
-        </div>
+            <div class="col-md-1"></div>
+        </div>'
 
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5 colunat">
                 <div class="caixa">
                     <h2>Como nos conhecemos!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aut consectetur dolorum et ex, excepturi facere, in incidunt laudantium minima modi numquam quidem rem repudiandae rerum suscipit veritatis voluptate voluptates. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores eius excepturi ipsum nihil nisi nostrum repellendus. Aperiam asperiores culpa enim excepturi facere harum ipsam modi, nisi non officia repellat vel. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquid corporis deserunt dolores ducimus earum eos error eum ex explicabo ipsa itaque laudantium nihil odit officia quam tempora ullam, ut!</p>
+                    <p>“O amor chega sem avisar. Um dia, você simplesmente vai beijar alguém e vai sentir que quer beijar aqueles lábios para o resto da vida.”</p>
+                    <p>É impressionante como o amor aparece em lugares mais tão simples e improváveis. O nosso nasceu dentro de um ônibus, mais especificadamente 474 UCDB/Júlio de Castilho. Nós já nos conhecíamos de vista na faculdade, ela era minha caloura. Quando comecei a estagiar nos laboratórios da faculdade, comecei a voltar no mesmo ônibus que ela. A cada viagem fomos nos conhecendo, vários papos e varias brincadeiras. Voltar para casa ficou muito mais agradável quando se estava com ela. Então resolvi apostar todas as minhas fichas na garota que fazia todo o meu fim de tarde feliz. A chamei para sair varias vezes e fui recusado em todas. </p>
+                    <p>Chegou um momento que tive que encarar a realidade e aceitar que seriamos só amigos. Desisti, mas a vida é uma caixinha de surpresas e ainda reservava uma surpresa. Depois de meses, ela começou a puxar os assuntos de nossas conversas e todos os dias vinha conversar comigo no Facebook. Eu achava isso estranho, mas já a enxergava como uma amiga e eu acreditava que ela também me via como amigo. Até que um dia nosso professor me contou que tinha uma menina da engenharia que gostava de mim.</p>
+                    <p>Só podia ser ela!</p>
+                    <p>Só que ela não queria mais falar comigo, porque estava com vergonha. Eu precisava falar com ela, não podia perder essa mulher maravilhosa. Foi então que arranjei uma forma criativa de conversar com ela e convida-la para ir ao cinema. Na luz do telão com um filme pouco interessante que tudo aconteceu. Ela me agarrou na primeira oportunidade que teve, isso mesmo, ela quem deu o primeiro beijo! </p>
+                    <p>Estamos juntos já faz cinco anos e agora queremos dar o passo mais importante em um relacionamento. Vamos nos casar e construir uma família juntos.O nosso amor é o mais puro e gostoso do mundo. Todos os dias me sinto feliz em estar do lado dela e quero faze-la feliz pelo resto da minha vida.</p>
                 </div>
             </div>
-            <div class="col-md-5 colunat">
-                <div class="caixa">
+            <div class="col-md-5 colunat direito">
+                <div class="caixa direito">
                     <div class="datacasa">
                         11/10/2016
                     </div>
