--- a/casamento/static/css/agradecimento.css
+++ b/casamento/static/css/agradecimento.css
@@ -62,66 +62,38 @@ ul{
     background: #FFC0CB;
     color: #FFFFFF;
 }
-.coracao{
-    text-align: center;
-}
-.colunat{
-    padding: 0px 5px;
-    margin: 25px 0px;
-}
+
 .caixa{
     background: #FFFFFF;
     box-shadow: 2px 2px 2px #888888;
-    align-text: center;
-    min-height: 800px;
+    min-height: 550px;
     padding: 5px 15px;
     border: 0px solid;
     border-radius: 5px;
-}
-
-.caixaimg{
-    background: #FFFFFF;
-    box-shadow: 2px 2px 2px #888888;
-    align-text: center;
-    padding: 5px 15px;
-    border: 0px solid;
-    border-radius: 5px;
-}
-
-h2{
-    margin: 10px 0px;
-    color: #FFC0CB;
-    font-family: 'Lobster';
-    font-size: 45px;
-    font-weight: normal;
-}
-
-.datacasa{
-    padding: 50px 0px 0px 0px;
+    overflow: auto;
+    margin: 0px 0px 20px 0px;
     text-align: center;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
+
+.texto{
+    font-size: 28px;
     color: #FFC0CB;
-    font-size: 80px;
-    margin: 100px 0px 0px 0px;
     font-family: 'Lobster';
+    margin: 15px 0px;
 }
-
-.caidata{
-     padding: 50px 0px 0px 0px;
-    text-align: center;
-    color: #FFC0CB;
-    font-size: 50px;
-    font-family: 'Lobster';
-}
-
-.dias{
-    font-size:80px;
-}
-
-.imgprincipal{
-    width: 500px;
-}
-
-
-
-
-
