--- a/casamento/static/css/link_presentes.css
+++ b/casamento/static/css/link_presentes.css
@@ -1,9 +1,10 @@
 body{
-    background: url("../imagem/fundo.jpg");
+    background: url("../imagem/bg.jpg");
 }
 
 .titulo{
     padding: 15px;
+    background: #FFC0CB;
 }
 
 p{
@@ -14,7 +15,7 @@ p{
 h1{
     margin: 0px;
     text-align: center;
-    color: #FFC0CB;
+    color: #FFFFFF;
     font-family: 'Lobster';
     font-size: 100px;
     font-weight: normal;
@@ -79,7 +80,7 @@ ul{
     color: #FFC0CB;
     font-family: 'Lobster';
     font-size: 60px;
-    margin: 50px 0px 0px 0px;
+    margin: 150px 0px 0px 0px;
 }
 
 .linklista{
