--- a/casamento/static/css/local.css
+++ b/casamento/static/css/local.css
@@ -1,9 +1,10 @@
 body{
-    background: url("../imagem/fundo.jpg");
+    background: url("../imagem/bg.jpg");
 }
 
 .titulo{
     padding: 15px;
+    background: #FFC0CB;
 }
 
 p{
@@ -14,7 +15,7 @@ p{
 h1{
     margin: 0px;
     text-align: center;
-    color: #FFC0CB;
+    color: #FFFFFF;
     font-family: 'Lobster';
     font-size: 100px;
     font-weight: normal;
@@ -82,7 +83,7 @@ ul{
 }
 
 .esp{
-    margin: 20px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
     padding: 0px;
 }
 .imgtxt{
