--- a/casamento/templates/casamento/agradecimento.html
+++ b/casamento/templates/casamento/agradecimento.html
@@ -4,12 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/presenca.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/agradecimento.css' %}"/>
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link rel="icon" href="{% static 'imagem/aliancaico.png' %}">
     <title>Title</title>
 </head>
 <body>
+
+    <div class="row">
+        <div class="col-md-12 titulo">
+            <h1>Agradecimento</h1>
+        </div>
+    </div>
+
+    <div class="row linhah1">
+        <div class="col-md-12"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10 menutopo">
+            <ul>
+                <a href="{% url 'casamento.views.tela_inicial'%}">
+                    <li>Tela Inicial</li>
+                </a>
+                <a href="{% url 'casamento.views.local_casamento'%}">
+                    <li>Local</li>
+                </a>
+                <a href="{% url 'casamento.views.linkpresente'%}">
+                    <li>Lista Presentes</li>
+                </a>
+                <a href="{% url 'casamento.views.presenca'%}">
+                    <li>Cofirmação de Presença</li>
+                </a>
+                <!--<a href="">
+                    <li>Blog</li>
+                </a>-->
+                <a href="{% url 'casamento.views.contato'%}">
+                    <li>Contato</li>
+                </a>
+            </ul>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10 caixa">
+            <div class="texto">Muito obrigado pela sua confirmação!</div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
 
 </body>
 </html>
